--- a/priv/templates/www/index.html
+++ b/priv/templates/www/index.html
@@ -26,6 +26,7 @@
         <a class="item user valid" onclick="$.app.user.logout();">
           <i class="sign out icon"></i> Logout
         </a>
+        {% block menu %}{% endblock %}
         <div class="right menu">
           <div class="item">
             <i class="wifi icon"></i><div id="statusbox" class="ui mini label">...</div> 
@@ -33,6 +34,8 @@
         </div>
       </div>
     </div>
+
+    {% block body %}{% endblock %}
   
     <div id="user_modal" class="ui modal">
       <div class="content">
@@ -103,7 +106,7 @@
           <div class="ui vertical divider e reg log">Or</div>
           <div class="ui vertical divider e prof"><i class="user icon"></i></div>
           <div class="center aligned column">
-            <div id="user_socials" class="ui items e prof"></div>
+            <div id="user_socials" class="ui middle aligned list e prof"></div>
             <div class="ui horizontal divider e prof">Link another account</div>
             <div class="e reg log prof">          
               <a href="/oauth/facebook/login" class="ui facebook button">
@@ -137,6 +140,7 @@
     </div>
 
     <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.serialize-object.min.js"></script>
     <script type="text/javascript" src="/js/semantic.min.js"></script>
     <script type="text/javascript" src="/js/moment.min.js"></script>
     
@@ -148,5 +152,6 @@
     <script src='https://www.google.com/recaptcha/api.js'></script> 
 
     <script type="text/javascript" src="/js/app.js"></script>
+    {% block script %}{% endblock %}
   </body>
 </html>
