Too many fixes, but look like it works. Remove gun - it has collision of cowlibs, add hackney.

--- a/priv/templates/www/index.html
+++ b/priv/templates/www/index.html
@@ -92,7 +92,8 @@
                 </div>
               </div>
               <div class="field e reg res">
-                <div class="g-recaptcha" id="user_captcha" data-sitekey="6LdqKQkTAAAAAEsBXbaCyCH_k-SGkuFqSiRHssiq"></div>
+                <div class="g-recaptcha" id="user_captcha" data-sitekey="6LcQbiETAAAAADG8IrcrBEVlAINWlqlHdA25gYcw">
+                </div>
               </div>
               <div class="ui blue button e log b_login">Login</div>
               <div class="ui blue button e reg b_register">Register</div>
