Move all configuration to sys.config. Correct README.

--- a/priv/templates/www/index.html
+++ b/priv/templates/www/index.html
@@ -92,7 +92,7 @@
                 </div>
               </div>
               <div class="field e reg res">
-                <div class="g-recaptcha" id="user_captcha" data-sitekey="6LcQbiETAAAAADG8IrcrBEVlAINWlqlHdA25gYcw">
+                <div class="g-recaptcha" id="user_captcha" data-sitekey="{{ recaptcha }}">
                 </div>
               </div>
               <div class="ui blue button e log b_login">Login</div>
@@ -149,7 +149,7 @@
       <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxtransport-xdomainrequest/1.0.1/jquery.xdomainrequest.min.js"></script>
     <![endif]-->
     <script type="text/javascript" src="https://dadata.ru/static/js/lib/jquery.suggestions-15.6.min.js"></script>
-    <script type="text/javascript">var DADATA_TOKEN = "ebe9372d199e2d78c15c18cb18a04e966a711665";</script>
+    <script type="text/javascript">var DADATA_TOKEN = "{{ dadata }}";</script>
     <script src='https://www.google.com/recaptcha/api.js'></script> 
 
     <script type="text/javascript" src="/js/app.js"></script>
